--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,20 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# PyCharm / IntelliJ
+.idea/
+*.iml
+
+# VS Code (jei naudoji)
+.vscode/
+
+# Django / Python
+__pycache__/
+*.py[cod]
+
+# Env failai
+.env
+
+# Kiti IDE / build failai
+*.xml
